--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Environment variables, never commit this file
+.env
+
+# The development sqlite file
+database/*.sqlite
